--- a/src/templates/video.hbs
+++ b/src/templates/video.hbs
@@ -4,10 +4,11 @@
   </div>
   <div class="section__content">
     <div class="video__player video-player">
-      <button class="video__player-play-btn">
+      {{!-- <button class="video__player-play-btn">
         <img src="../assets/video/play-btn.svg" alt="play btn placeholder">
-      </button>
-      <img class="video__player-img" src="../pictures/video/video-player.jpg" alt="video player placeholder">
+      </button> --}}
+      {{!-- <img class="video__player-img" src="../pictures/video/video-player.jpg" alt="video player placeholder"> --}}
+      <video class="video__player-img" src="../assets/video/video.mp4" controls></video>
     </div>
   </div>
 </section>
