fix: hamburger menu errors in validator.w3

--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -10,9 +10,9 @@
   <nav class="header__nav">
     <div class="header__menu-container">
       <button class="header__menu-hamburger menu-hamburger">
-        <div class="menu-hamburger__line"></div>
-        <div class="menu-hamburger__line"></div>
-        <div class="menu-hamburger__line"></div>
+        <span class="menu-hamburger__line"></span>
+        <span class="menu-hamburger__line"></span>
+        <span class="menu-hamburger__line"></span>
       </button>
       <ul class="header-menu">
         <li class="header-menu__item">
