--- a/portfolio/src/styles/contacts.scss
+++ b/portfolio/src/styles/contacts.scss
@@ -1,5 +1,7 @@
 .contacts {
-  background: no-repeat center url("../pictures/contacts/bg-contacts.jpg");
+  background: no-repeat url("../pictures/contacts/bg-contacts.jpg");
+  background-size: auto 700px;
+  background-position: center center;
   padding: 60px $container-padding 195px;
   margin-left: calc(-1 * #{$container-padding});
   margin-right: calc(-1 * #{$container-padding});
