--- a/portfolio/src/templates/video.hbs
+++ b/portfolio/src/templates/video.hbs
@@ -3,12 +3,14 @@
     <h2 class="section__header" data-translate="video">Video</h2>
   </div>
   <div class="section__content">
-    <div class="video__player video-player">
-      {{!-- <button class="video__player-play-btn">
-        <img src="../assets/video/play-btn.svg" alt="play btn placeholder">
-      </button> --}}
-      {{!-- <img class="video__player-img" src="../pictures/video/video-player.jpg" alt="video player placeholder"> --}}
-      <video class="video__player-img" src="../assets/video/video.mp4" controls></video>
+    <div class="video__player">
+      <div class="video__player-container">
+        {{!-- <button class="video__player-play-btn">
+          <img src="../assets/video/play-btn.svg" alt="play btn placeholder">
+        </button> --}}
+        {{!-- <img class="video__player-img" src="../pictures/video/video-player.jpg" alt="video player placeholder"> --}}
+        <video class="video__player-img" src="../assets/video/video.mp4" controls></video>
+      </div>
     </div>
   </div>
 </section>
