--- a/portfolio/src/styles/constants.scss
+++ b/portfolio/src/styles/constants.scss
@@ -22,6 +22,9 @@ $price-list-item-gap: 25px;
 $skills-list-item-gap: 40px;
 $animation-duration: 0.2s;
 
+$button-width: 220px;
+$button-height: 55px;
+
 $bg-color: var(--bg-color);
 $text-color: var(--text-color);
 $theme-color: var(--theme-color);
