--- a/portfolio/src/styles/constants.scss
+++ b/portfolio/src/styles/constants.scss
@@ -1,5 +1,6 @@
 :root {
   --bg-color: black;
+  --header-bg-color: black;
   --text-color: white;
   --theme-color: #bdae82;
   --text-with-bg-image: white;
@@ -15,7 +16,7 @@
 
 $hamburger-size: 50px;
 $container-width: 1440px;
-$container-padding: var(--container-padding);
+$container-padding: 20px;
 $header-height: 90px;
 $works-item-gap: 25px;
 $price-list-item-gap: 25px;
