--- a/portfolio/src/styles/general.scss
+++ b/portfolio/src/styles/general.scss
@@ -22,7 +22,7 @@ h1, h2, h3, h4 {
 
 a {
   text-decoration: none;
-  color: $text-color;
+  // color: $text-color;
   transition: 0.4s;
 }
 a:hover {
@@ -40,11 +40,14 @@ ul {
 .container {
   max-width: $container-width;
   margin: 0 auto;
+  padding: 0 $container-padding;
   position: relative;
 }
 
-.main {
-  padding: 0 $container-padding;
+.main,
+.header,
+.footer {
+  width: 100%;
 }
 
 .button {
@@ -142,7 +145,7 @@ ul {
     width: 100%;
     height: 100%;
     object-fit: contain;
-    fill: $text-color;
+    fill: $text-with-bg-image;
     transition: 0.2s;
   }
   a:hover {
