--- a/portfolio/src/styles/hero.scss
+++ b/portfolio/src/styles/hero.scss
@@ -1,11 +1,15 @@
 .hero {
-  padding-top: 250px;
-  padding-left: 80px;
-  margin: 0 calc(-1 * #{$container-padding});
-  height: 910px;
-  text-align: left;
-  background: url("../pictures/bg.jpg") no-repeat;
-  background-size: auto 100%;
+  width: 100%;
+  background-color: var(--header-bg-color);
+
+  &__container {
+    padding-top: 250px;
+    padding-left: 80px;
+    height: 910px;
+    text-align: left;
+    background: url("../pictures/bg.jpg") no-repeat;
+    background-size: auto 100%;
+  }
   
   &__inner {
     max-width: 470px;
