fix: broken adaptive after previous fix

--- a/portfolio/src/styles/constants.scss
+++ b/portfolio/src/styles/constants.scss
@@ -30,6 +30,7 @@ $bg-color: var(--bg-color);
 $text-color: var(--text-color);
 $theme-color: var(--theme-color);
 $text-with-bg-image: var(--text-with-bg-image);
+$header-bg-color: var(--header-bg-color);
 
 $main-font: 'Inter', sans-serif;
 $headers-font: 'Merriweather', serif;
