--- a/portfolio/src/styles/hero.scss
+++ b/portfolio/src/styles/hero.scss
@@ -33,9 +33,13 @@
 
 @media (max-width: 768px) {
   .hero {
-    padding-top: 168px;
-    height: 590px;
-    padding-left: 60px;
+    &__container {
+      padding-top: 168px;
+      height: 590px;
+      padding-left: 60px;
+      background-size: auto 104%;
+      background-position: 0px -24px;
+    }
 
     &__inner {
       max-width: 420px;
@@ -57,8 +61,10 @@
 
 @media (max-width: 540px) {
   .hero {
-    padding-top: 150px;
-    height: 590px;
-    padding-left: $container-padding;
+    &__container {
+      padding-top: 150px;
+      height: 590px;
+      padding-left: $container-padding;
+    }
   }
 }
