--- a/custom-video/src/styles/custom-video-player.scss
+++ b/custom-video/src/styles/custom-video-player.scss
@@ -1,4 +1,3 @@
-@import '@fortawesome/fontawesome-free/css/all.min.css';
 
 :root {
   --player-popup-size: 150px;
@@ -22,6 +21,7 @@ video::-webkit-media-controls-enclosure {
 }
 
 .player {
+  width: 100%;
   overflow: hidden;
   position: relative;
   background: var(--player-controls-bg-color);
