feat: move theme switch button

--- a/portfolio/src/styles/hero.scss
+++ b/portfolio/src/styles/hero.scss
@@ -3,6 +3,7 @@
   background-color: var(--header-bg-color);
 
   &__container {
+    position: relative;
     padding-top: 250px;
     padding-left: 80px;
     height: 910px;
