--- a/portfolio/src/templates/hero.hbs
+++ b/portfolio/src/templates/hero.hbs
@@ -9,5 +9,9 @@
         Hire me
       </button>
     </div>
+    <div class="theme-switcher">
+      <button class="theme-switcher__link theme-switcher__link_dark">
+      </button>
+    </div>
   </div>
 </section>
