--- a/portfolio/src/styles/theme-switcher.scss
+++ b/portfolio/src/styles/theme-switcher.scss
@@ -52,3 +52,10 @@
     right: 64px;
   }
 }
+
+@media (max-width: 540px) {
+  .theme-switcher {
+    bottom: $container-padding;
+    right: $container-padding;
+  }
+}
