--- a/portfolio/src/templates/portfolio.hbs
+++ b/portfolio/src/templates/portfolio.hbs
@@ -7,7 +7,7 @@
       <button class="portfolio__button button" data-folder="winter" data-translate="winter">Winter</button>
       <button class="portfolio__button button" data-folder="spring" data-translate="spring">Spring</button>
       <button class="portfolio__button button" data-folder="summer" data-translate="summer">Summer</button>
-      <button class="portfolio__button button button_filled" data-folder="autumn" data-translate="autumn">Autumn</button>
+      <button class="portfolio__button button button_active" data-folder="autumn" data-translate="autumn">Autumn</button>
     </div>
     <div class="portfolio__works-container">
       {{!-- winter --}}
