--- a/portfolio/src/styles/general.scss
+++ b/portfolio/src/styles/general.scss
@@ -57,13 +57,14 @@ ul {
   width: $button-width;
   height: $button-height;
   border: 2px solid $theme-color;
-  color: $theme-color;
-  background: $bg-color;
+  color: $btn-color;
+  background: $btn-bg;
   cursor: pointer;
   transition: 0.4s;
 
   &:hover {
-    color: $text-color;
+    color: $btn-bg;
+    background: $btn-color;
     box-shadow: 0 0 0 20px transparent;
     animation: pulse 0.8s;
   }
@@ -75,8 +76,18 @@ ul {
   }
 
   &_filled {
-    color: $bg-color;
+    color: $btn-bg;
     background: $theme-color;
+
+    &:hover {
+      color: $text-color;
+      background: $theme-color;
+    }
+  }
+
+  &_active {
+    color: $btn-bg;
+    background: $btn-color;
   }
 }
 
@@ -100,7 +111,7 @@ ul {
       left: 0;
       right: 0;
       top: calc(50% - 1px);
-      background-color: $theme-color;
+      background-color: $header-color;
       z-index: 8;
     }
   }
@@ -113,7 +124,7 @@ ul {
     font-weight: bold;
     font-size: 40px;
     line-height: 80px;
-    color: $theme-color;
+    color: $header-color;
     background: $bg-color;
     padding: 0 25px;
   }
