--- a/portfolio/src/templates/footer.hbs
+++ b/portfolio/src/templates/footer.hbs
@@ -1,8 +1,8 @@
 <footer class="footer">
   <div class="footer__container container">
     <div class="footer__github-link github-link">
-      &copy;&nbsp;&nbsp;&nbsp;
-      <span class="year">2022</span>
+      <span class="footer__copy">&copy;</span>
+      <span class="footer__year">2022</span>
       <a href="https://github.com/tretyakov-a">github</a>
     </div>
     <div class="footer__rsschool-link rsschool-link">
