--- a/portfolio/src/templates/header.hbs
+++ b/portfolio/src/templates/header.hbs
@@ -34,7 +34,7 @@
       </div>
       <div class="language-switcher">
         <a class="language-switcher__link language-switcher__link_active" href="#" data-language="en">en</a>
-        <span>&nbsp;/</span>
+        <span>/</span>
         <a class="language-switcher__link" href="#" data-language="ru">ru</a>
       </div>
     </nav>
