--- a/portfolio/src/templates/price.hbs
+++ b/portfolio/src/templates/price.hbs
@@ -5,7 +5,7 @@
   <div class="section__content">
     <ul class="price__list">
       <li class="price__list-item price-item">
-        <h3 class="price-item__title">Standart</h3>
+        <h3 class="price-item__title">Standard</h3>
         <div class="price-item__price">500&nbsp;&dollar;</div>
         <div class="price-item__text">
           <span data-translate="price-descripton-1-span-1">One location</span><br />
