--- a/portfolio/src/templates/skills.hbs
+++ b/portfolio/src/templates/skills.hbs
@@ -28,10 +28,10 @@
       </li>
       <li class="skills__list-item">
         <div class="skills__list-item-icon">
-          <img src="../assets/skills/image.svg" alt="Rotouch skill">
+          <img src="../assets/skills/image.svg" alt="Retouch skill">
         </div>
         <h4 class="skills__list-item-title" data-translate="skill-title-3">
-          Rotouch
+          Retouch
         </h4>
         <div class="skills__list-item-text" data-translate="skill-text-3">
           I strive to make photography surpass reality
