--- a/portfolio/src/styles/general.scss
+++ b/portfolio/src/styles/general.scss
@@ -126,7 +126,7 @@ ul {
     line-height: 80px;
     color: $header-color;
     background: $bg-color;
-    padding: 0 25px;
+    padding: 0 20px;
   }
 
   &__content {
@@ -174,6 +174,7 @@ ul {
 
     &__header-container {
       width: 364px;
+      margin-bottom: 50px;
     }
 
     &__header {
