--- a/portfolio/src/styles/skills.scss
+++ b/portfolio/src/styles/skills.scss
@@ -59,7 +59,9 @@
     padding: 0 40px;
     
     &__list {
-      margin-bottom: -75px;
+      margin-bottom: -77px;
+      margin-right: 2px;
+      margin-left: -2px;
     }
 
     &__header-container {
@@ -67,7 +69,7 @@
     }
     
     &__list-item {
-      margin-bottom: 75px;
+      margin-bottom: 76px;
       padding: 0;
 
       &-icon {
@@ -77,7 +79,7 @@
       &-text {
         font-size: 18px;
         line-height: 22px;
-        width: 95%;
+        width: 93%;
       }
     }
   }
