--- a/portfolio/src/templates/footer.hbs
+++ b/portfolio/src/templates/footer.hbs
@@ -3,7 +3,7 @@
     <div class="footer__github-link github-link">
       <span class="footer__copy">&copy;</span>
       <span class="footer__year">2022</span>
-      <a href="https://github.com/tretyakov-a">github</a>
+      <a href="https://github.com/tretyakov-a">tretyakov-a</a>
     </div>
     <div class="footer__rsschool-link rsschool-link">
       <a href="https://rs.school/js-stage0/">Rolling Scopes School</a>
