--- a/portfolio/src/templates/skills.hbs
+++ b/portfolio/src/templates/skills.hbs
@@ -5,8 +5,7 @@
   <div class="section__content">
     <ul class="skills__list">
       <li class="skills__list-item">
-        <div class="skills__list-item-icon">
-          <img src="../assets/skills/camera.svg" alt="Digital photography skill">
+        <div class="skills__list-item-icon skills__list-item-icon_camera">
         </div>
         <h4 class="skills__list-item-title" data-translate="skill-title-1">
           Digital photography
@@ -16,8 +15,7 @@
         </div>
       </li>
       <li class="skills__list-item">
-        <div class="skills__list-item-icon">
-          <img src="../assets/skills/video.svg" alt="Video shooting skill">
+        <div class="skills__list-item-icon skills__list-item-icon_video">
         </div>
         <h4 class="skills__list-item-title" data-translate="skill-title-2">
           Video shooting
@@ -27,8 +25,7 @@
         </div>
       </li>
       <li class="skills__list-item">
-        <div class="skills__list-item-icon">
-          <img src="../assets/skills/image.svg" alt="Retouch skill">
+        <div class="skills__list-item-icon skills__list-item-icon_retouch">
         </div>
         <h4 class="skills__list-item-title" data-translate="skill-title-3">
           Retouch
@@ -38,8 +35,7 @@
         </div>
       </li>
       <li class="skills__list-item">
-        <div class="skills__list-item-icon">
-          <img src="../assets/skills/mic.svg" alt="Audio skill">
+        <div class="skills__list-item-icon skills__list-item-icon_audio">
         </div>
         <h4 class="skills__list-item-title" data-translate="skill-title-4">
           Audio
