--- a/portfolio/src/styles/header.scss
+++ b/portfolio/src/styles/header.scss
@@ -304,12 +304,16 @@
     padding-left: 127px;
     top: 0;
     right: 0;
-    width: 80%;
+    width: 80.7%;
     min-height: 100vh;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
     background: $bg-color;
+
+    &__item {
+      margin-bottom: 16px;
+    }
 
     &__item-link {
       font-size: 34.8235px;
